Closed
Bug 1698019
Opened 4 years ago
Closed 4 years ago
[wayland] Global mute toggles window is too large
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
RESOLVED
FIXED
88 Branch
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox86 | --- | unaffected |
firefox87 | --- | unaffected |
firefox88 | --- | fixed |
People
(Reporter: heftig, Assigned: stransky)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(2 files)
The global mute toggle window is now too large; see screenshot.
Regressed by bug 1612738, found using
mozregression --bad 2021-03-11 --good 2021-03-01 -a https://webrtc.github.io/samples/src/content/peerconnection/audio/ --pref privacy.webrtc.globalMuteToggles:true
Assignee | ||
Comment 1•4 years ago
|
||
Updated•4 years ago
|
Assignee: nobody → stransky
Status: NEW → ASSIGNED
Assignee | ||
Comment 2•4 years ago
|
||
Reporter | ||
Comment 3•4 years ago
|
||
The Try build fixes the regression; thanks.
Updated•4 years ago
|
Keywords: regression
Comment 4•4 years ago
|
||
Set release status flags based on info from the regressing bug 1612738
status-firefox86:
--- → unaffected
status-firefox87:
--- → unaffected
status-firefox-esr78:
--- → unaffected
Assignee | ||
Comment 5•4 years ago
|
||
Assignee | ||
Updated•4 years ago
|
Flags: needinfo?(stransky)
Pushed by stransky@redhat.com:
https://hg.mozilla.org/integration/autoland/rev/18a04d19588c
[Linux] Set minimal mContainer widget size without CSD borders, r=jhorak
Assignee | ||
Updated•4 years ago
|
Flags: needinfo?(stransky)
Comment 7•4 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 88 Branch
Updated•4 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•