Bug 1698019 [Linux] Set minimal mContainer widget size without CSD borders, r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D108167